Bug 60182 - When deleting a profile dir which is salted, delete the parent dir as well. r=racham, sr=sspitzer